5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1644_1053.log
== TEST (2019-04-16 10:37:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
cervo = "cervo eh patrono de Harry Potter"
if (msg=cervo):
	 print ("Cervo")
-- ERROR:
File "XXXX", line 6
    if (msg=cervo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
cervo = "cervo eh patrono de Harry Potter"
if (msg==cervo):
	 print ("msg")
-- ERROR:
File "XXXX", line 6
    if (msg=cervo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:39:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
cervo = "cervo eh patrono de Harry Potter"
if (msg==cervo):
	 print ("msg")
-- EXECUTION TIME:
0.144819
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:41:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
cervo = "cervo eh patrono de Harry Potter"
if (msg==cervo):
	 print ("")
-- ERROR:
File "XXXX", line 6
    if (msg=cervo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
cervo = "cervo eh patrono de Harry Potter"
if (msg==cervo):
	 print ("")
-- ERROR:
File "XXXX", line 6
    if (msg=cervo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:52:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print (msg, "nao eh patrono de Harry Potter")
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:53:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print (msg, "nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.212299
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:53:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print (msg, "nao eh patrono de Harry Potter")
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:54:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print ("nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.148781
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:54:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print ("nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.185419
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:55:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print ("nao eh patrono de Harry Potter")
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:57:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print ("nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.129551
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:58:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print (msg,"nao eh patrono de Harry Potter")
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:58:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print (msg,"nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.220261
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:59:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono de Harry Potter")
else:
	print (msg,"nao eh patrono de Harry Potter")
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:00:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono do Harry Potter")
else:
	print (msg,"nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:00:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
msg = input ("Digite o patrono: ")
patrono = "cervo"
if (msg==patrono):
	 print ("cervo eh patrono do Harry Potter")
else:
	print (msg,"nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.113248
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
